--- a/pychess/static/pychess/styles.css
+++ b/pychess/static/pychess/styles.css
@@ -151,6 +151,8 @@ a:hover {
     flex-basis:100%;
     align-content: center;
     justify-content: center;
+    max-height:100%;
+    max-width:100%;
 }
 
 .game {
@@ -161,6 +163,8 @@ a:hover {
     width:auto;
     align-self:center;
     aspect-ratio: 16/ 9;
+    max-width: 100%;
+    max-height:100%;
 }
 
 .boardContainer {
@@ -170,43 +174,57 @@ a:hover {
     flex-direction:column;
     align-items: center;
     justify-content: center;
+
     
 }
 
 .board {
-    width:80%;
+    max-width:100%;
+    max-height:100%;
     height:auto;
-    flex-basis: 80%;
-    flex: 1;
     display:grid;
     grid-template-rows: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
     aspect-ratio: 1/1;
+
 }
 
 .boardRow {
     display:grid;
     grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
     width:100%;
+    max-width:100%;
+    max-height:100%;
+    overflow:hidden;
+
 }
 
 .lightCell{
     background-color: #b3a58f;
     display:flex;
+    max-height:100%;
+    max-width:100%;
+    aspect-ratio:1/1;
     justify-content: center;
     align-items: center;
+    overflow:hidden;
 }
 
 .darkCell{
     background-color: #30538c;
     display:flex;
+    max-height:100%;
+    max-width:100%;
+    aspect-ratio:1/1;
     justify-content: center;
     align-items: center;
+    overflow:hidden;
 }
 
 .pieceImg{
-    width:100%;
+    width:90%;
     height:auto;
     display:block;
+    overflow:hidden;
 }
 
 .info {
@@ -220,6 +238,8 @@ a:hover {
     border:solid;
     border-color:aliceblue;
     border-radius:15px;
+    max-height:100%;
+    max-width:33%;
 }
 
 .infoTop {
@@ -255,6 +275,7 @@ a:hover {
     align-items: center;
     justify-content: center;
     margin-top:3px;
+    border-radius:15px;
 }
 
 
