--- a/pychess/static/pychess/styles.css
+++ b/pychess/static/pychess/styles.css
@@ -263,6 +263,8 @@ a:hover {
     flex-shrink: 0;
     flex-basis:82%;
     overflow-y: auto;
+    overflow-x: hidden;
+    border-radius:15px;
 }
 
 .moveCard {
