--- a/pychess/templates/pychess/localGame.html
+++ b/pychess/templates/pychess/localGame.html
@@ -293,8 +293,17 @@ Play Chess!
 
             //The chess engine will spit out a list of possible spaces the piece can move; this will highlight the legal moves in green.
             moveList['validMoves'].forEach((move) => {
-                cellToHighlight = document.querySelector(`#p${move[0]}_${move[1]}`);
-                cellToHighlight.style.backgroundColor = 'springGreen';
+                let cellToHighlight = document.querySelector(`#p${move[0]}_${move[1]}`);
+                
+                if (cellToHighlight.className == "lightCell")
+                {
+                    cellToHighlight.style.backgroundColor = 'springGreen';
+                }
+                else if (cellToHighlight.className == "darkCell")
+                {
+                    cellToHighlight.style.backgroundColor = 'seaGreen';
+                }
+
             })
         })
     }
