--- a/pychess/static/pychess/styles.css
+++ b/pychess/static/pychess/styles.css
@@ -255,13 +255,38 @@ a:hover {
     font-weight: bold;
 }
 
+.infoMid {
+    flex-basis:15%;
+    flex-grow:0;
+    flex-shrink:0;
+    border-bottom:solid;
+    width:100%;
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+    overflow-x:hidden;
+}
+
 .infoBottomLocal {
+    width:100%;
+    display:flex;
+    flex-direction:column;
+    flex-grow:1;
+    flex-shrink: 1;
+    flex-basis:82%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    border-radius:15px;
+}
+
+.infoBottomNetwork {
     width:100%;
     display:flex;
     flex-direction:column;
     flex-grow:0;
     flex-shrink: 0;
-    flex-basis:82%;
+    flex-basis:70%;
     overflow-y: auto;
     overflow-x: hidden;
     border-radius:15px;
