--- a/pychess/static/pychess/styles.css
+++ b/pychess/static/pychess/styles.css
@@ -174,18 +174,15 @@ a:hover {
     flex-direction:column;
     align-items: center;
     justify-content: center;
-
-    
 }
 
 .board {
     max-width:100%;
     max-height:100%;
-    height:auto;
+    height:100%;
     display:grid;
     grid-template-rows: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
     aspect-ratio: 1/1;
-
 }
 
 .boardRow {
@@ -249,14 +246,14 @@ a:hover {
     justify-content: center;
     flex-grow:0;
     flex-shrink: 0;
-    flex-basis: 15%;
+    height: 3.5em;
     border-bottom:solid;
     font-size:24px;
     font-weight: bold;
 }
 
 .infoMid {
-    flex-basis:15%;
+    height: 3.5em;
     flex-grow:0;
     flex-shrink:0;
     border-bottom:solid;
@@ -265,27 +262,14 @@ a:hover {
     flex-direction:column;
     align-items: center;
     justify-content: center;
-    overflow-x:hidden;
 }
 
-.infoBottomLocal {
+.infoBottom {
     width:100%;
     display:flex;
     flex-direction:column;
     flex-grow:1;
     flex-shrink: 1;
-    flex-basis:82%;
-    overflow-y: auto;
-    overflow-x: hidden;
-    border-radius:15px;
-}
-
-.infoBottomNetwork {
-    width:100%;
-    display:flex;
-    flex-direction:column;
-    flex-grow:0;
-    flex-shrink: 0;
     flex-basis:70%;
     overflow-y: auto;
     overflow-x: hidden;
@@ -303,6 +287,28 @@ a:hover {
     justify-content: center;
     margin-top:3px;
     border-radius:15px;
+}
+
+.userNameDisplay {
+    overflow:hidden; 
+    text-align: center; 
+    text-overflow: ellipsis; 
+    text-wrap: nowrap;
+}
+
+.transportBar {
+    flex-basis:10%;
+    display:flex;
+    flex-direction:row;
+    align-items:center;
+    justify-content: space-around;
+}
+
+.transportButton {
+    flex-basis:20%;
+    height:80%;
+    width:20%;
+    max-height:100%;
 }
 
 
