--- a/pychess/templates/pychess/register.html
+++ b/pychess/templates/pychess/register.html
@@ -45,7 +45,7 @@ Register for pyChess
             <div class="formItem">Password:</div>
             <input class="formItem" type="password" name="password" placeholder="Password">
             <div class="formItem">Confirm Password:</div>
-            <input class="formItem" type="password" name="password" placeholder="Confirm Password">
+            <input class="formItem" type="password" name="passwordConfirm" placeholder="Confirm Password">
             <div class="formItem"><input class="formItem" type="submit" value="Create Account"></div>
             {% csrf_token %}
         </form>
